# AdventOfCode2022

./: .clang-tidy  .cmake-format.yaml  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
.devcontainer/: Dockerfile
configured_files/: CMakeLists.txt  config.hpp.in
css/: my_custom_theme.css
include/: aoc_day.hpp  aoc_days.hpp
include/day_solutions/: aoc_day_demo.hpp
include/day_solutions/day_01/: aoc_day_01.hpp
include/day_solutions/day_02/: aoc_day_02.hpp
include/day_solutions/day_03/: aoc_day_03.hpp
include/day_solutions/day_04/: aoc_day_04.hpp
include/day_solutions/day_05/: aoc_day_05.hpp
include/day_solutions/day_06/: aoc_day_06.hpp
include/day_solutions/day_07/: aoc_day_07.hpp
include/day_solutions/day_08/: aoc_day_08.hpp
include/day_solutions/day_09/: aoc_day_09.hpp
include/day_solutions/day_10/: aoc_day_10.hpp
include/day_solutions/day_11/: aoc_day_11.hpp
include/day_solutions/day_12/: aoc_day_12.hpp
include/day_solutions/day_13/: aoc_day_13.hpp
include/day_solutions/day_14/: aoc_day_14.hpp
include/day_solutions/day_15/: aoc_day_15.hpp
include/day_solutions/day_16/: aoc_day_16.hpp
include/day_solutions/demo/: aoc_day_demo.hpp
instructions/: README_BUILDING.md  README_CLANGFORMAT.md  README_CLANGTIDY.md  README_CMAKEFORMAT.md  README_DEVCONTAINERJSON.md  README_DOCKER.md
src/: CMakeLists.txt  aoc_day.cpp  aoc_days.cpp  main.cpp
src/day_solutions/: aoc_day_demo.cpp
src/day_solutions/day_01/: aoc_day_01.cpp
src/day_solutions/day_02/: aoc_day_02.cpp
src/day_solutions/day_03/: aoc_day_03.cpp
src/day_solutions/day_04/: aoc_day_04.cpp
src/day_solutions/day_05/: aoc_day_05.cpp
src/day_solutions/day_06/: aoc_day_06.cpp
src/day_solutions/day_07/: aoc_day_07.cpp
src/day_solutions/day_08/: aoc_day_08.cpp
src/day_solutions/day_09/: aoc_day_09.cpp
src/day_solutions/day_10/: aoc_day_10.cpp
src/day_solutions/day_11/: aoc_day_11.cpp
src/day_solutions/day_12/: aoc_day_12.cpp
src/day_solutions/day_13/: aoc_day_13.cpp
src/day_solutions/day_14/: aoc_day_14.cpp
src/day_solutions/day_15/: aoc_day_15.cpp
src/day_solutions/day_16/: aoc_day_16.cpp
src/day_solutions/demo/: aoc_day_demo.cpp
test/: CMakeLists.txt  aoc_day_tests.cpp  tests.cpp
test/day_solutions/day_01/: aoc_day_01_tests.cpp
test/day_solutions/day_02/: aoc_day_02_tests.cpp
test/day_solutions/day_03/: aoc_day_03_tests.cpp
test/day_solutions/day_04/: aoc_day_04_tests.cpp
test/day_solutions/day_05/: aoc_day_05_tests.cpp
test/day_solutions/day_06/: aoc_day_06_tests.cpp
test/day_solutions/day_07/: aoc_day_07_tests.cpp
test/day_solutions/day_08/: aoc_day_08_tests.cpp
test/day_solutions/day_09/: aoc_day_09_tests.cpp
test/day_solutions/day_10/: aoc_day_10_tests.cpp
test/day_solutions/day_11/: aoc_day_11_tests.cpp
test/day_solutions/day_12/: aoc_day_12_tests.cpp
test/day_solutions/day_13/: aoc_day_13_tests.cpp
test/day_solutions/day_14/: aoc_day_14_tests.cpp
test/day_solutions/day_15/: aoc_day_15_tests.cpp
test/day_solutions/day_16/: aoc_day_16_tests.cpp
test/day_solutions/demo/: aoc_day_demo_tests.cpp
